--- a/templates/artigo_tg.html
+++ b/templates/artigo_tg.html
@@ -56,7 +56,7 @@
 						</center><br><br>
 						Se usar o artigo para qualquer fim, não esqueça de referenciá-lo, pois ele faz parte do acervo de trabalhos de graduação da Faculdade de Tecnologia do Estado de São Paulo. E assim <b>evitamos qualquer tipo de plágio</b>. Referência do artigo:<br><br>
 						<blockquote>
-							ALMEIDA, Eugênio Sper de; DONIZETTI, Guilherme da Silva; RODRIGUES, Luiz Fernando da Costa. <b>APLICAÇÃO DE INTERNET DAS COISAS PARA MONITORAMENTO DE TEMPERATURA, UMIDADE E PRESENÇA EM DATA CENTERS E AMBIENTES COMPUTACIONAIS CRÍTICOS.</b> 2021. Disponível em: <'https://www.fateccruzeiro.edu.br/projetos/acervo/b3bfaf7a9a722448b352f1b3731b5802.pdf'> Acesso em: sua_data.
+							DONIZETTI, Guilherme da Silva; RODRIGUES, Luiz Fernando da Costa. <b>APLICAÇÃO DE INTERNET DAS COISAS PARA MONITORAMENTO DE TEMPERATURA, UMIDADE E PRESENÇA EM DATA CENTERS E AMBIENTES COMPUTACIONAIS CRÍTICOS.</b> 2021. Disponível em: <'https://www.fateccruzeiro.edu.br/projetos/acervo/b3bfaf7a9a722448b352f1b3731b5802.pdf'> Acesso em: sua_data.
 						</blockquote>
 						<b>Autores: </b>Guilherme Donizetti e <a href="https://github.com/SACRIER" target="_blank">Luiz Fernando Rodrigues</a> - Faculdade de Tecnologia do Estado de São Paulo.<br>
 						<b>Orientador: </b>Prof. Dr. Eugênio Sper de Almeida - Coordenação de Pesquisa Aplicada e Desenvolvimento Tecnológico (COPDT) / Instituto Nacional de Pesquisas Espaciais (INPE).</p>
