Alteracoes de melhorias: mudanca da extensao das imagens e aumento de contraste do texto com a cor de fundo.

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,13 @@
 
 	Adapted by Guilherme Donizetti
 -->
-<html>
+<html lang="pt_br">
+
 	<head>
 		<title>Guilherme Donizetti</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" defer="defer">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}">
 		<link rel="shortcut icon" href="../static/images/site_icon.png" defer="defer">
 	</head>
 
@@ -36,10 +37,10 @@
 					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/eu_2.png" alt="" /></a>
 					<br>
 					<a href="https://github.com/guilhermedonizetti" target="_blank" class="icon">
-						<img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" />
+						<img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" alt="Meu GitHub" />
 					</a>
 					<a href="https://br.linkedin.com/in/guilhermedonizetti-ads" target="_blank" class="icon">
-						<img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" />
+						<img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="Meu LinkedIn" />
 					</a>
 				</div>
 			</header>
@@ -65,7 +66,7 @@
 							<div class="col-12">
 								Contribuições recentes no GitHub
 								<span class="image fit">
-									<img src="https://activity-graph.herokuapp.com/graph?username=guilhermedonizetti&theme=react-dark&custom_title=Minhas contribuições no GitHub">
+									<img src="https://activity-graph.herokuapp.com/graph?username=guilhermedonizetti&theme=react-dark&custom_title=Minhas contribuições no GitHub" alt="Grafico das contribuicoes recentes no GitHub">
 								</span>
 							</div>
 						</div>
@@ -78,7 +79,7 @@
 						<h2>Ao Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPq)</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/grafana.png" class="image fit thumb"><img src="../static/images/grafana.png" alt="" /></a>
+								<a href="../static/images/grafana.avif" class="image fit thumb"><img src="../static/images/grafana.avif" alt="Grafana - imagem do grafico" /></a>
 								<h3>IoT para monitoramento de variáveis ambientais em <i>data centers</i>.</h3>
 								<p>Projeto desenvolvido para o CNPq, consiste em monitorar temperatura, umidade relativa e presença de pessoas garantindo operação em tempo real através de Internet das Coisas.</p>
 								<a href="../templates/cnpq_projeto.html" class="icon">Saber mais</a>
@@ -88,19 +89,19 @@
 						<h2>Inteligência Artificial</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/OCR_python.png" class="image fit thumb"><img src="../static/images/OCR_python.png" alt="" /></a>
+								<a href="../static/images/OCR_python.avif" class="image fit thumb"><img src="../static/images/OCR_python.avif" alt="Programa OCR Python" /></a>
 								<h3>OCR Python</h3>
 								<p>Programa para reconhecimento de caracteres em imagens baseado no Português brasileiro. Inclui reconhecimento, extração e análise de textos.</p>
 								<a href="../templates/ia_ocr_python.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/bidirecional.png" class="image fit thumb"><img src="../static/images/bidirecional.png" alt="" /></a>
+								<a href="../static/images/bidirecional.avif" class="image fit thumb"><img src="../static/images/bidirecional.avif" alt="Mapa Bidirecional" /></a>
 								<h3>Rotas Cidades</h3>
 								<p>Métodos de Inteligência Artificial para encontrar a melhor rota entre uma cidade e outra tendo, obrigatoriamente, que passar por uma cidade X.</p>
 								<a href="../templates/ia_rotas_cidades.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/waypy_pypi.png" class="image fit thumb"><img src="../static/images/waypy_pypi.png" alt="" /></a>
+								<a href="../static/images/waypy_pypi.avif" class="image fit thumb"><img src="../static/images/waypy_pypi.avif" alt="Pagina do Projeto no PyPi" /></a>
 								<h3>WayPy (pacote)</h3>
 								<p>O pacote contém 8 métodos diferentes de buscas em grafo, cada método utiliza um critério diferente e com isso poder obter diferentes resultados.</p>
 								<a href="../templates/pacote_waypy.html" class="icon">Saber mais</a>
@@ -110,13 +111,13 @@
 						<h2>Outros</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/guilhermedonizetti/Classificador_Obesidade/raw/master/images/imagem1.png" class="image fit thumb"><img src="https://github.com/guilhermedonizetti/Classificador_Obesidade/raw/master/images/imagem1.png" height="100%" alt="" /></a>
+								<a href="https://github.com/guilhermedonizetti/Classificador_Obesidade/raw/master/images/imagem1.png" class="image fit thumb"><img src="https://github.com/guilhermedonizetti/Classificador_Obesidade/raw/master/images/imagem1.png" height="100%" alt="Classificador de Obesidade" /></a>
 								<h3>Classificador de Obesidade</h3>
 								<p>Através de uma árvore de decisão, o programa analisa 17 parâmetros relacionados à características do usuário e sobre sua rotina rotina, enquanto o usuário responde ele classifica em uma categoria de peso.</p>
 								<a href="../templates/classificador_obesidade.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/prev_tempo.png" class="image fit thumb"><img src="../static/images/previsao_tempo/img3.gif" alt="" /></a>
+								<a href="../static/images/prev_tempo.png" class="image fit thumb"><img src="../static/images/previsao_tempo/img3.gif" alt="GIF da previsao do tempo" /></a>
 								<h3>Previsão do Tempo</h3>
 								<p>Programa para consulta e visualização de dados meteorológicos / previsão do tempo. Exibe as linhas de temperatura mínima e máxima de 10 dias em uma cidade.</p>
 								<a href="../templates/previsao_tempo.html" class="icon">Saber mais</a>
@@ -126,7 +127,7 @@
 						<h2>API</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/API.png" class="image fit thumb"><img src="../static/images/API.png" alt="" /></a>
+								<a href="../static/images/API.png" class="image fit thumb"><img src="../static/images/API.png" alt="API do Vale do Paraiba" /></a>
 								<h3>API Vale do Paraíba</h3>
 								<p>A API se concentra na entrega de dados geográficos das cidades do Vale do Paraíba (latitude e longitude), isso permite uma API focada para a região e deixa os dados mais enxutos.</p>
 								<a href="../templates/api.html" class="icon">Saber mais</a>
@@ -136,25 +137,25 @@
 						<h2>Acadêmicos</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/dc_monit.png" class="image fit thumb"><img src="../static/images/dc_monit.png" alt="" /></a>
+								<a href="../static/images/dc_monit.avif" class="image fit thumb"><img src="../static/images/dc_monit.avif" alt="Monitoramento Remoto do Datacenter" /></a>
 								<h3>Trabalho de Graduação</h3>
 								<p>O projeto de TG é baseado nas pesquisas do projeto desenvolvido ao CNPq e inclui o desenvolvimento em Computação em Nuvem para monitoramento remoto.</p>
 								<a href="../templates/tg.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/sendex.png" class="image fit thumb"><img src="../static/images/sendex.png" alt="" height="200" /></a>
+								<a href="../static/images/sendex.avif" class="image fit thumb"><img src="../static/images/sendex.avif" alt="Sendex - programa de envio de emails" height="200" /></a>
 								<h3>Sendex</h3>
 								<p>Um programa para envio de e-mails incluindo anexação de arquivos. Também realiza registro de logs, autenticação de usuário e de servidor.</p>
 								<a href="../templates/sendex.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/zenith2.png" class="image fit thumb"><img src="../static/images/zenith2.png" alt="" /></a>
+								<a href="../static/images/zenith2.avif" class="image fit thumb"><img src="../static/images/zenith2.avif" alt="Zenith - graficos" /></a>
 								<h3>Zenith</h3>
 								<p>O Zenith é um programa que apoia a visualização de dados se conectando com qualquer banco de dados (MySQL) e gera algumas possíveis visualizações.</p>
 								<a href="../templates/zenith.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/tcc.png" class="image fit thumb"><img src="../static/images/tcc.png" alt="" /></a>
+								<a href="../static/images/tcc.avif" class="image fit thumb"><img src="../static/images/tcc.avif" alt="Trabalho de Conclusao de Curso" /></a>
 								<h3>TCC Técnico em Informática</h3>
 								<p>O TCC teve a proposta de desenvolver um site para facilitar a busca de profissionais de Construção Civil, também foi usado na Exposição Técnica Industrial da Etec.</p>
 								<a href="../templates/tcc.html" class="icon">Saber mais</a>
@@ -166,7 +167,7 @@
 								<div class="col-12">
 									Todas as minhas contribuições no GitHub
 									<span class="image fit">
-										<img src="https://github-readme-streak-stats.herokuapp.com?user=guilhermedonizetti&theme=blux&date_format=j%20M%5B%20Y%5D&background=000000"/>
+										<img src="https://github-readme-streak-stats.herokuapp.com?user=guilhermedonizetti&theme=blux&date_format=j%20M%5B%20Y%5D&background=000000" alt="Todas as Contribuicoes no GitHub"/>
 									</span>
 								</div>
 							</div>
@@ -181,13 +182,13 @@
 						<h2>Postagens de conteúdos em outros lugares</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://guilhermedonizettiads.medium.com/" class="image fit thumb" target="_blank"><img src="../static/images/publicacoes/gui_medium.png" alt="" /></a>
+								<a href="https://guilhermedonizettiads.medium.com/" class="image fit thumb" target="_blank"><img src="../static/images/publicacoes/gui_medium.png" alt="Perfil no Medium" /></a>
 								<h3>Medium - Guilherme Donizetti</h3>
 								<p>Postagens relacionadas à tecnologias que conheço e desejo explicar para que outras pessoas também possam conhecer. Também, uma forma de fixar meus conhecimentos.</p>
 								<a href="https://guilhermedonizettiads.medium.com/" class="icon" target="_blank">Visitar perfil</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/publicacoes/gui_tg.png" class="image fit thumb"><img src="../static/images/publicacoes/gui_tg.png" alt="" /></a>
+								<a href="../static/images/publicacoes/gui_tg.png" class="image fit thumb"><img src="../static/images/publicacoes/gui_tg.png" alt="Artigo Cientifico - Fatec" /></a>
 								<h3>Artigo Científico do meu TG</h3>
 								<p>O artigo científico é do meu trabalho de graduação, contém os materias utilizados e como foram aplicados no desenvolvimento, conta com a fundamentação teórica.</p>
 								<a href="../templates/artigo_tg.html" class="icon">Saber mais</a>
@@ -219,13 +220,11 @@
 						</center>
 						
 						<center>
-						<ul class="copyright">
-							Essa página foi desenvolvida com o apoio de <a href="https://html5up.net/license" target="_blank">HTML5 UP</a>, que cedeu livremente o belo projeto para ser adaptado por mim, Guilherme!</li>
-						</ul>
+							<ul class="copyright">
+								Essa página foi desenvolvida com o apoio de <a href="https://html5up.net/license" target="_blank">HTML5 UP</a>, que cedeu livremente o belo projeto para ser adaptado por mim, Guilherme!</li>
+							</ul>
 						</center>
 
-
 			</div>
-
 	</body>
 </html>
