--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -3117,6 +3117,14 @@ input, select, textarea {
 
 	}
 
+			/* Aumentar o contraste */
+			p {
+				color: #4F4F4F;
+			}
+			h3, h2, ul {
+				color: #363636;
+			}
+
 /* Small */
 
 	@media screen and (max-width: 736px) {
