Incluindo botao para CV.

--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -56,8 +56,12 @@
 						Meu interesse por Tecnologia da Informação começou com 17 anos, quando ingressei no curso técnico em Informática na Etec Cruzeiro, onde eu realmente criei gosto pela área.<br><br>
 						Meu desenvolvimento é contínuo. A cada atividade em equipe, para mim, é uma oportunidade para aprender novas competências técnicas e humanas. Até das situações mais adversas costumo tirar algum aprendizado.<br>
 						Nas atividades em equipe sempre sou engajado e colaborativo, não hesito em pedir ajuda e em ajudar. Das <i>soft skills</i> mais evidentes em mim, destaco a adaptabilidade, colaboração, responsabilidade e resiliência.<br><br>
+						
+						<a href="https://drive.google.com/file/d/1c1AsUdwluB9IkryOvlhfGbUX7ew68GPl/view?usp=sharing" target="_blank" class="button">Meu currículo</a>
+						
 						</center>
 
+						<br>
 						<h1>Cursos que realizei:</h1>
 						<p>Aqui destaco alguns cursos que realizei.</p>
 						<div class="box alt">
