Inclusao de meta-descricoes nas paginas do portfolio.

--- a/templates/artigo_tg.html
+++ b/templates/artigo_tg.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - Artigo de TG</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Artigo científico do Trabalho de Graduação da faculdade" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 
