--- a/templates/classificador_obesidade.html
+++ b/templates/classificador_obesidade.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - Obesidade</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Programa de Mineração de Dados para classificação de peso entre os diferentes tipos de obesidade" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 
