--- a/templates/cnpq_projeto.html
+++ b/templates/cnpq_projeto.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - CNPq</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Projeto de monitoramento de variáveis ambientais feito ao Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPq)" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 		
