--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 		<title>Guilherme Donizetti</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Portfólio do Guilherme Donizetti para apresentação de projetos pessoais e de sua pessoalidade." />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}">
 		<link rel="shortcut icon" href="../static/images/site_icon.png" defer="defer">
 	</head>
