--- a/templates/tg.html
+++ b/templates/tg.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - TG</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Sistema de monitoramento de variáveis ambientais desenvolvido como trabalho final na Faculdade" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 
