--- a/templates/zenith.html
+++ b/templates/zenith.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - Zenith</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Software de apoio à visualização de dados que conecta à qualquer banco de dados MySQL e permite selecionar as colunas para formar gráficos" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 
