--- a/templates/api.html
+++ b/templates/api.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - API</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="API para entrega de dados geográficos de cidades do Vale do Paraíba" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}">
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 		
