--- a/templates/erro.html
+++ b/templates/erro.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - Erro</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Página de erro" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}">
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 	</head>
@@ -36,7 +37,7 @@
 
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
-									<div class="col-12"><span class="image fit"><img src="../static/images/erro.jpg" alt="" /></span></div>
+									<div class="col-12"><span class="image fit"><img src="../static/images/erro.avif" alt="" /></span></div>
 								</div>
 							</div>
 
