--- a/templates/ia_ocr_python.html
+++ b/templates/ia_ocr_python.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - OCR Python</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Programa de Inteligência Artificial para reconhecimento de caracteres em imagens" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 
