--- a/templates/pacote_waypy.html
+++ b/templates/pacote_waypy.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - WayPy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Pacote Python com 8 métodos de busca em grafo com algoritmos de Inteligência Artificial" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 
