--- a/templates/previsao_tempo.html
+++ b/templates/previsao_tempo.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - Previsão do Tempo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Programa de consulta à API de dados meteorológicos para gráfico de previsão do tempo." />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 
