--- a/templates/sendex.html
+++ b/templates/sendex.html
@@ -9,6 +9,7 @@
 		<title>Guilherme - Sendex</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Programa para envio de e-mails a partir de um servidor SMTP local" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 
