Alterado os formatos de algumas imagens para melhorar o desempenho.

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/eu_2.png" alt="" /></a>
+					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/eu_2.avif" alt="" /></a>
 					<br>
 					<a href="https://github.com/guilhermedonizetti" target="_blank" class="icon">
 						<img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" alt="Meu GitHub" />
@@ -128,7 +128,7 @@
 						<h2>API</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/API.png" class="image fit thumb"><img src="../static/images/API.png" alt="API do Vale do Paraiba" /></a>
+								<a href="../static/images/api.avif" class="image fit thumb"><img src="../static/images/api.avif" alt="API do Vale do Paraiba" /></a>
 								<h3>API Vale do Paraíba</h3>
 								<p>A API se concentra na entrega de dados geográficos das cidades do Vale do Paraíba (latitude e longitude), isso permite uma API focada para a região e deixa os dados mais enxutos.</p>
 								<a href="../templates/api.html" class="icon">Saber mais</a>
@@ -183,13 +183,13 @@
 						<h2>Postagens de conteúdos em outros lugares</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://guilhermedonizettiads.medium.com/" class="image fit thumb" target="_blank"><img src="../static/images/publicacoes/gui_medium.png" alt="Perfil no Medium" /></a>
+								<a href="https://guilhermedonizettiads.medium.com/" class="image fit thumb" target="_blank"><img src="../static/images/publicacoes/gui_medium.avif" alt="Perfil no Medium" /></a>
 								<h3>Medium - Guilherme Donizetti</h3>
 								<p>Postagens relacionadas à tecnologias que conheço e desejo explicar para que outras pessoas também possam conhecer. Também, uma forma de fixar meus conhecimentos.</p>
 								<a href="https://guilhermedonizettiads.medium.com/" class="icon" target="_blank">Visitar perfil</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/publicacoes/gui_tg.png" class="image fit thumb"><img src="../static/images/publicacoes/gui_tg.png" alt="Artigo Cientifico - Fatec" /></a>
+								<a href="../static/images/publicacoes/gui_tg.avif" class="image fit thumb"><img src="../static/images/publicacoes/gui_tg.avif" alt="Artigo Cientifico - Fatec" /></a>
 								<h3>Artigo Científico do meu TG</h3>
 								<p>O artigo científico é do meu trabalho de graduação, contém os materias utilizados e como foram aplicados no desenvolvimento, conta com a fundamentação teórica.</p>
 								<a href="../templates/artigo_tg.html" class="icon">Saber mais</a>
