--- a/templates/artigo_tg.html
+++ b/templates/artigo_tg.html
@@ -68,7 +68,7 @@
 
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
-									<div class="col-12"><span class="image fit"><img src="../static/images/publicacoes/gui_tg.png" alt="" /></span></div><br>
+									<div class="col-12"><span class="image fit"><img src="../static/images/publicacoes/gui_tg.avif" alt="" /></span></div><br>
 								</div>
 							</div>
 
