Corrigindo erro de imagem que nao aparecia na pagina.

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
 						<h2>API</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/api.avif" class="image fit thumb"><img src="../static/images/api.avif" alt="API do Vale do Paraiba" /></a>
+								<a href="../static/images/API.avif" class="image fit thumb"><img src="../static/images/API.avif" alt="API do Vale do Paraiba" /></a>
 								<h3>API Vale do Paraíba</h3>
 								<p>A API se concentra na entrega de dados geográficos das cidades do Vale do Paraíba (latitude e longitude), isso permite uma API focada para a região e deixa os dados mais enxutos.</p>
 								<a href="../templates/api.html" class="icon">Saber mais</a>
