--- a/templates/erro.html
+++ b/templates/erro.html
@@ -13,6 +13,13 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}">
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 	</head>
+
+	<style>
+		#header {
+			background-image: url("images/overlay.png"), url("../static/images/{{ nome_banner }}.jpg");
+		}
+	</style>
+	
 	<body class="is-preload">
 
 		<!-- Header -->
