--- a/templates/index.html
+++ b/templates/index.html
@@ -29,13 +29,19 @@
 			})
 			();
 	</script>
+
+	<style>
+		#header {
+			background-image: url("images/overlay.png"), url("../static/images/{{ nome_banner }}.jpg");
+		}
+	</style>
 																																																							
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/eu_2.avif" alt="" /></a>
+					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/eu_2.png" alt="" /></a>
 					<br>
 					<a href="https://github.com/guilhermedonizetti" target="_blank" class="icon">
 						<img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" alt="Meu GitHub" />
