--- a/templates/ia_rotas_cidades.html
+++ b/templates/ia_rotas_cidades.html
@@ -26,6 +26,13 @@
 			();
 		</script>
 	</head>
+
+	<style>
+		#header {
+			background-image: url("images/overlay.png"), url("../static/images/{{ nome_banner }}.jpg");
+		}
+	</style>
+	
 	<body class="is-preload">
 
 		<!-- Header -->
