--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -28,6 +28,13 @@
 		</script>
 		
 	</head>
+
+	<style>
+		#header {
+			background-image: url("images/overlay.png"), url("../static/images/{{ nome_banner }}.jpg");
+		}
+	</style>
+	
 	<body class="is-preload">
 
 		<!-- Header -->
