Insercao: [1] novo cargo na empresa. Correcao: [1

--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -60,7 +60,7 @@
 						</center>
 
 						<center>
-						Olá, tenho 21 anos, sou formado em Análise e Desenvolvimento de Sistemas na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).
+						Olá, tenho 22 anos, sou formado em Análise e Desenvolvimento de Sistemas na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).
 						Meu interesse por Tecnologia da Informação começou com 17 anos, quando ingressei no curso técnico em Informática na Etec Cruzeiro, onde eu realmente criei gosto pela área.<br><br>
 						Meu desenvolvimento é contínuo. A cada atividade em equipe, para mim, é uma oportunidade para aprender novas competências técnicas e humanas. Até das situações mais adversas costumo tirar algum aprendizado.<br>
 						Nas atividades em equipe sempre sou engajado e colaborativo, não hesito em pedir ajuda e em ajudar. Das <i>soft skills</i> mais evidentes em mim, destaco a adaptabilidade, colaboração, responsabilidade e resiliência.<br><br>
@@ -282,7 +282,14 @@
 						<div class="box alt">
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-4">
-									<label>Duração: {{ tempo }}. (Dez/2021 - em andamento). Posição: PROGRAMADOR JÚNIOR.<br>
+									<label>Duração: {{ tempo }}. (Jun/2022 - em andamento). Posição: PROGRAMADOR PLENO.<br>
+									Mais Top Estética - maior franquia de estética da América.</label>
+									<span class="image fit">
+										<img src="../static/images/imagem1.png" alt="" />
+									</span>
+								</div>
+								<div class="col-4">
+									<label>Duração: 6 meses. (Dez/2021 - Mai/2022). Posição: PROGRAMADOR JÚNIOR.<br>
 									Mais Top Estética - maior franquia de estética da América.</label>
 									<span class="image fit">
 										<img src="../static/images/imagem1.png" alt="" />
