--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -70,6 +70,30 @@
 						</center>
 
 						<br>
+
+						<div class="box alt">
+							<div class="progress">
+								<div class="progress-bar bg-success" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+							</div>
+							<h4>PHP</h4>
+
+							<div class="progress">
+								<div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+							</div>
+							<h4>Python</h4>
+
+							<div class="progress">
+								<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+							</div>
+							<h4>SQL</h4>
+
+							<div class="progress">
+								<div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+							</div>
+							<h4>JavaScript</h4>
+						</div>
+
+						<br>
 						<h1>Cursos que realizei:</h1>
 						<p>Aqui destaco alguns cursos que realizei.</p>
 						<div class="box alt">
