Ajustes: [1] Alterado a foto que aparece na pagina inicial e na pagina Sobre Mim. [2] Removido 1 frase.

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/eu_2.png" alt="" /></a>
+					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/eu9.png" alt="" /></a>
 					<br>
 					<a href="https://github.com/guilhermedonizetti" target="_blank" class="icon">
 						<img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" alt="Meu GitHub" />
@@ -73,7 +73,7 @@
 							<div class="col-12">
 								Contribuições recentes no GitHub
 								<span class="image fit">
-									<img src="https://activity-graph.herokuapp.com/graph?username=guilhermedonizetti&theme=react-dark&custom_title=Minhas contribuições no GitHub" alt="Grafico das contribuicoes recentes no GitHub">
+									<img src="https://activity-graph.herokuapp.com/graph?username=guilhermedonizetti&theme=react-dark&custom_title=Minhas contribuições no GitHub" alt="Gráfico das contribuições recentes no GitHub">
 								</span>
 							</div>
 						</div>
