Insercao: [1] Percentual de habilidade em tecnologias.

--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -69,28 +69,44 @@
 						
 						</center>
 
-						<br>
+						<br><br>
 
+						<h1>Tecnologias</h1>
+						<p>Autoavaliação em algumas tecnologias de 0 a 100%:</p>
 						<div class="box alt">
 							<div class="progress">
-								<div class="progress-bar bg-success" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+								<div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
 							</div>
-							<h4>PHP</h4>
-
+							<h5><span style="color: #21A02C; font-weight:bold;">PHP:</span> Utilizo o PHP (no trabalho e em projetos pessoais) para conexão com banco de dados, validação e tratamento de dados, programação de <i>cron jobs</i>, de webhook, teste de software.</h5>
+							<br>
 							<div class="progress">
-								<div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+								<div class="progress-bar bg-info" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
 							</div>
-							<h4>Python</h4>
-
+							<h5><span style="color: #5EB0D3; font-weight:bold;">Python:</span> Aplicado em desenvolvimento Web, programas de desktop, transmissão de dados remotos por telemetria, teste de software. Conhecimento em desenvolvimnto e publicação de bilbiotecas e deploy de aplicações.</h5>
+							<br>
 							<div class="progress">
-								<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+								<div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
 							</div>
-							<h4>SQL</h4>
-
+							<h5><span style="color: #ED4836; font-weight:bold;">SQL:</span> Conhecimento em funções de agregação, DML - <i>(Data Manipulation Language)</i>, Cardinalidade/Relacionamentos, normalização de dados, modelagem relacional e conceitual.</h5>
+							<br>
 							<div class="progress">
-								<div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+								<div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
 							</div>
-							<h4>JavaScript</h4>
+							<h5><span style="color: #D5CB18; font-weight:bold;">JavaScript:</span> Jquery para manipulação de elementos HTML e eventos, Ajax, manipulação de JSon, validação e tratamento de dados, visualização de dados (ChartJS).</h5>
+							<br>
+							<div class="progress">
+								<div class="progress-bar bg-secondary" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+							</div>
+							<h5><span style="color: #625E5D; font-weight:bold;">REST API:</span> Construção de APIs nativamente (sem framework), e também, Flask-RESTful para APIs em Python, Symfony para APIs em PHP, Postman, conhecimento do padrão REST.</h5>
+							<br>
+							<div class="progress">
+								<div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+								<div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+								<div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+								<div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+								<div class="progress-bar bg-secondary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+							</div>
+							<h5><span style="color: #625E5D; font-weight:bold;">PROGRAMAÇÃO:</span> Na combinação dessas tecnologias (e outras ferramentas e técnicas) me faço um <span style="font-weight: bold;">bom programador</span>, com capacidade de compreender e corrigir códigos de terceiros, resolver conflitos em produção (sem tempo), planejar / propor / aplicar solução de problemas, comunicar com profisionais de outros setores, trabalhar em equipe, auxiliar colegas em suas dificuldades, ensinar o que sei, atuar em projetos, entre outras. Porém, sempre aberto ao aprendizado de novas formas para evoluir como pessoa e profissional!</b></h5>
 						</div>
 
 						<br>
