Insercao: [1] criacao nova pagina Codigo de Barras. [2] Incluido o JS do chat online no scripts.js para padronizar.

--- a/templates/index.html
+++ b/templates/index.html
@@ -129,6 +129,12 @@
 								<p>Programa para consulta e visualização de dados meteorológicos / previsão do tempo. Exibe as linhas de temperatura mínima e máxima de 10 dias em uma cidade.</p>
 								<a href="../templates/previsao_tempo.html" class="icon">Saber mais</a>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/guilhermedonizetti/Leitor_Codigo_Barras/blob/master/images/codigo_barras.png?raw=true" class="image fit thumb"><img src="https://github.com/guilhermedonizetti/Leitor_Codigo_Barras/blob/master/images/codigo_barras.png?raw=true" alt="Imagem da leitura de código de barras." height="170px" /></a>
+								<h3>Leitor de Código de Barras</h3>
+								<p>O programa captura a imagem de um código de barras e em seguida abstrai a imegm, onde pode acessar informações como preço e outros dados de um produto.</p>
+								<a href="../templates/codigo_barras.html" class="icon">Saber mais</a>
+							</article>
 						</div>
 
 						<h2>API</h2>
