Incluir Idiomas na pagina Pessoal. Correcao de Junior para Plenos na pagina Inicial. Incluir Vanilla JS na pagina Pessoal.

--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -72,12 +72,12 @@
 						<br><br>
 
 						<h1 id="tituloTecnologia">
-							<i id="iconTecnologiaDown" class="fa fa-caret-down" aria-hidden="true" style="display: none;"></i>
-							<i id="iconTecnologiaRight" class="fa fa-caret-right" aria-hidden="true"></i>
-							<input id="controlTecnologia" value="fechado" type="hidden">
+							<i id="iconTecnologiaDown" class="fa fa-caret-down" aria-hidden="true"></i>
+							<i id="iconTecnologiaRight" class="fa fa-caret-right" aria-hidden="true" style="display: none;"></i>
+							<input id="controlTecnologia" value="aberto" type="hidden">
 							&nbsp; Tecnologias
 						</h1>
-						<div id="areaTecnologias" style="display: none;">
+						<div id="areaTecnologias">
 							<p>Autoavaliação em algumas tecnologias de 0 a 100%:</p>
 							<div class="box alt">
 								<div class="progress">
@@ -98,7 +98,7 @@
 								<div class="progress">
 									<div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
 								</div>
-								<h5><span style="color: #D5CB18; font-weight:bold;">JavaScript:</span> Jquery para manipulação de elementos HTML e eventos, Ajax, manipulação de JSon, validação e tratamento de dados, visualização de dados (ChartJS).</h5>
+								<h5><span style="color: #D5CB18; font-weight:bold;">JavaScript:</span> Jquery para manipulação de elementos HTML e eventos, Ajax, manipulação de JSon, validação e tratamento de dados, visualização de dados (ChartJS). Vanilla JS.</h5>
 								<br>
 								<div class="progress">
 									<div class="progress-bar bg-secondary" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
@@ -341,12 +341,12 @@
 						<br>
 
 						<h1 id="tituloExperiencia">
-							<i id="iconExperienciaDown" class="fa fa-caret-down" aria-hidden="true" style="display: none;"></i>
-							<i id="iconExperienciaRight" class="fa fa-caret-right" aria-hidden="true"></i>
-							<input id="controlExperiencia" value="fechado" type="hidden">
+							<i id="iconExperienciaDown" class="fa fa-caret-down" aria-hidden="true"></i>
+							<i id="iconExperienciaRight" class="fa fa-caret-right" aria-hidden="true" style="display: none;"></i>
+							<input id="controlExperiencia" value="aberto" type="hidden">
 							&nbsp; </i>Experiência:
 						</h1>
-						<div id="areaExperiencia" style="display: none;">
+						<div id="areaExperiencia">
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
 									<div class="col-4">
@@ -372,6 +372,59 @@
 									</div>
 								</div>
 							</div>
+						</div>
+
+						<br>
+						<h1 id="tituloIdiomas">
+							<i id="iconIdiomasDown" class="fa fa-caret-down" aria-hidden="true"></i>
+							<i id="iconIdiomasRight" class="fa fa-caret-right" aria-hidden="true" style="display: none;"></i>
+							<input id="controlIdiomas" value="aberto" type="hidden">
+							&nbsp; Idiomas
+						</h1>
+						<div id="areaIdiomas" style="display: inline;">
+
+							<!-- Ingles -->
+							<div class="col-12">
+								<div class="card text-center">
+									<div class="card-header" style="background-color: #F08080;">
+										<img src="../static/images/ingles.ico" width="50" height="50"/>
+									</div>
+									<div class="card-body">
+										<h5 class="card-title">Inglês Básico</h5>
+										<p class="card-text">Com boa habilidade de leitura, escrita e gramática no nível básico, mas posso ser ainda melhor se a comunicação for sobre Tecnologia, onde tenho mais vocabulário. Anteriormente, estudei Inglês apenas na faculdade e aprendi o idioma com formalidade. Atualmente sou aluno da WiseUp Online, onde tenho acesso a conteúdo estruturado e dinâmico para melhorar minha capacidade de escuta e de fala.</p>
+									</div>
+								</div>
+							</div>
+							<br>
+
+							<!-- Espanhol -->
+							<div class="col-12">
+								<div class="card text-center">
+									<div class="card-header" style="background-color: #f3f33c;">
+										<img src="../static/images/espanhol.ico" width="50" height="50"/>
+									</div>
+									<div class="card-body">
+										<h5 class="card-title">Espanhol Básico</h5>
+										<p class="card-text">Desenvolvi o Espanhol essencial através de livros ( Como Ler/Falar/Escrever em Espanhol, editora Hunter) e aprendi comunicação básica como apresentação, direção, pedidos, convites, e regras de pronunciação. Participo de grupos de Espanhol pelo WhatsApp onde sempre me comunico com nativos por escrita e áudio.</p>
+									</div>
+								</div>
+							</div>
+							<br>
+
+							<!-- Portugues -->
+							<div class="col-12">
+								<div class="card text-center">
+									<div class="card-header" style="background-color: #ADD8E6;">
+										<img src="../static/images/portugues.ico" width="50" height="50"/>
+									</div>
+									<div class="card-body">
+										<h5 class="card-title">Português Nativo</h5>
+										<p class="card-text">Capacidade de me comunicar na linguagem formal e informal do idioma, com amplo conhecimento gramatical e ótima hábilidade para comunicação técnica.</p>
+									</div>
+								</div>
+							</div>
+							<br>
+
 						</div>
 			</div>
 
